Xfce v4.18: Fix invisible items in thunar sidebar

--- a/gtk-3.0/apps/_thunar.scss
+++ b/gtk-3.0/apps/_thunar.scss
@@ -7,10 +7,6 @@
     -gtk-icon-transform:scale(0.72);
 }
 
-scrolledwindow.sidebar treeview.view {
-    background: darken($_sidebar_color, 2%);
-    padding: 1.5px;
-}
   
 /* path-bar of thunar */
 window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-bar {
@@ -45,7 +41,9 @@ window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-
 }
   
 /* thunar sidepane */
-window.thunar paned > scrolledwindow treeview.view {
+.thunar scrolledwindow.sidebar treeview.view {
+    background: darken($_sidebar_color, 2%);
+    padding: 1.5px;
     &:hover,  &:selected {
         background: transparentize($selected_bg_color, 0.3);
         color: $selected_fg_color;
